<resources>
    <string name="app_name">Taskr</string>
    <string name="edit_message">Enter a message</string>
    <string name="find_profile">Find User</string>
    <string name="edit_profile_id">Enter a user id</string>
    <string name="find_nearby_requests">Find nearby requests</string>
    <string name="request_overview_title">Request</string>

    <string name="unable_to_reach_server">Unable to reach Taskr server</string>
    <string name="connection_error">Connection Error</string>
    <string name="profile_error">Profile Error</string>

    <string name="nearby_requests">Nearby Requests</string>
    <string name="my_requests">My Requests</string>
    <string name="location_error_title">Error Getting Location</string>

    <string name="facebook_app_id">352479678432354</string>
    <string name="action_logout">Log Out</string>
    <string name="login_error_title">Error Logging In</string>
    <string name="logging_into_taskr">Logging into Taskr</string>
    <string name="ok">Ok</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_requests">Nearby Requests</string>
    <string name="nav_mine">My Requests</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_card">Payment Info</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>

    <!-- Request-related strings -->
    <string name="request_title">Request</string>
    <string name="load_request_error_title">Error Getting Request</string>
    <string name="load_request_error_msg">Looks like something went wrong while trying to load a request! Please try again in a bit.</string>
    <string name="accept_request_success_title">Request Accepted</string>
    <string name="accept_request_success_msg">You accepted the request successfully!</string>
    <string name="accept_request_error_title">Error Accepting Request</string>
    <string name="accept_request_error_msg">Looks like something broke while trying to accept the request! Please try again in a bit.</string>
    <string name="pay_request_success_title">Request Paid</string>
    <string name="pay_request_success_msg">You paid for the request successfully!</string>
    <string name="pay_request_error_title">Error Paying for Request</string>
    <string name="pay_request_error_msg">Looks like something broke while trying to pay for the request! Please try again in a bit.</string>
    <string name="complete_request_success_title">Request Completed</string>
    <string name="complete_request_success_msg">You completed the request successfully!</string>
    <string name="complete_request_error_title">Error Completing Request</string>
    <string name="complete_request_error_msg">Looks like something broke while trying to complete the request! Please try again in a bit.</string>
    <string name="action_complete">Complete</string>
    <string name="action_completed">Completed</string>
    <string name="action_pay">Pay</string>
    <string name="action_paid">Paid</string>
    <string name="action_accept">Accept</string>
    <string name="action_canceled">Canceled</string>
    <string name="action_edit">Edit</string>
    <string name="action_accepted">Accepted</string>
    <string name="action_bug">Hey you found a bug :)</string>
    <string name="create_request_title">Request Created</string>
    <string name="create_request_message">Successfully created the request!</string>
    <string name="create_request_error_title">Failed to Create Request</string>
    <string name="create_request">Create Request</string>
    <string name="edit_request">Edit Request</string>
    <string name="edit_request_title">Request Edited</string>
    <string name="edit_request_message">Successfully edited the request!</string>
    <string name="edit_request_error_title">Failed to Edit Request</string>
    <string name="geocode_error_title">Unable to Lookup Location</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="cancel_title">Canceled Request</string>
    <string name="cancel_error_title">Failed to Cancel Request</string>
    <string name="cancel_message">Successfully canceled the request!</string>

    <string name="req_title">Title</string>
    <string name="req_amount">Amount</string>
    <string name="req_due">Due By</string>
    <string name="req_description">Description</string>
    <string name="req_location">Location</string>

    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="sure_cancel">Are you sure you want to cancel your request?</string>

    <string name="rating_num_stars">5</string>
    <string name="rating_comment">Comment</string>

    <!-- Places -->
    <string name="places_error_title">Unable to load Google Places</string>

    <!-- Profile strings -->
    <string name="profile_loading">Profile Loading...</string>
    <string name="average_rating_descriptor">Average fulfiller rating:</string>
    <string name="email_subject">Message from Taskr user </string>

    <!-- Preferences -->
    <string name="category_development">Development</string>
    <string name="default_hostname">taskr130.herokuapp.com</string>
    <string name="key_hostname">hostname</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hostname_title">Hostname</string>
    <string name="hostname_summary">Address of the Taskr server</string>
    <string name="default_search_radius">10</string>
    <string name="key_search_radius">search_radius</string>
    <string name="search_radius_title">Search Radius</string>
    <string name="search_radius_summary">Maximum possible request distance in miles</string>

    <string name="role_requester">requester</string>
    <string name="role_fulfiller">fulfiller</string>
    <string name="role_any">any</string>

    <!-- Rating Strings -->
    <string name ="rate_task">Rate Your Completed Task</string>
    <string name ="rating_success">Rating Success</string>
    <string name ="rating_failure">Rating Failure</string>
    <string name ="rating_submitted">Thank you! Your rating has been submitted.</string>

    <!-- Tag names -->
    <string name="main_activity_tag">MainActivity</string>
    <string name="login_fragment_tag">LoginFragment</string>
    <string name="profile_fragment_tag">ProfileTag</string>
    <string name="request_fragment_tag">RequestFragment</string>
    <string name="request_overview_fragment_tag">RequestOverviewFragment</string>
    <string name="requests_fragment_tag">RequestsFragment</string>
    <string name="settings_fragment_tag">SettingsFragment</string>
    <string name="payment_fragment_tag">PaymentFragment</string>

    <!-- Notification Strings -->
    <string name="notification_type">notification_type</string>
    <string name="request_id">request_id</string>

    <!-- Strings for very very safe way of storing credit card info -->
    <string name="payment_preferences">Payment Preferences</string>
    <string name="payment_info">Payment Info</string>
    <string name="save_payment_info">Save</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_cvv">Card CVV</string>
    <string name="card_expiration_month">Card Expiration Month</string>
    <string name="card_expiration_year">Card Expiration Year</string>
    <string name="payment_update_success_title">Success!</string>
    <string name="payment_update_success_body">Your payment info was successfully updated!</string>
    <string name="payment_update_error_title">Error</string>
    <string name="payment_update_error_body">Oops...something broke while we were trying to update your payment info :(. Please try again!</string>

    <!-- Dialog config Strings -->
    <string name="show_as_dialog">showAsDialog</string>

    <!-- GCM Strings -->
    <string name="registration_intent_service_tag">Registration Intent Service</string>
    <string name="token_sent_to_server">token_sent_to_server</string>
    <string name="gcm_registration_complete">gcm_registration_complete</string>
    <string name="gcm_registration_success_toast">Registered device with GCM.</string>
    <string name="gcm_registration_error_toast">ERROR: Failed to register device with GCM</string>
    <string name="gcm_device_token">gcm_device_token</string>
    <string name="gcm_update_success_toast">Updated device ID on server</string>
    <string name="gcm_update_error_toast">ERROR: Failed to update server with new device ID</string>
    <string name="gcm_device_type">android</string>
    <string name="request_completed">Request Completed</string>
    <string name="request_completed_body">Your request, %1$s, has been completed!</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="request_accepted_body">Your request, %1$s, has been accepted!</string>
    <string name="request_paid">Request Paid For</string>
    <string name="request_paid_body">You have been paid for completing the request, %1$s!</string>
</resources>
