<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/human_greeting"
            android:title="@string/nav_requests" />
        <item
            android:id="@+id/nav_mine"
            android:icon="@drawable/pin"
            android:title="@string/nav_mine" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/dollar_sign"
            android:title="@string/nav_card" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/power"
            android:title="@string/nav_logout" />
    </group>

</menu>
