<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/title"
            android:hint="@string/req_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/amount"
            android:hint="@string/req_amount"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/due"
            android:hint="@string/req_due"
            android:cursorVisible="false"
            android:textIsSelectable="false"
            android:focusable="false"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/description"
            android:hint="@string/req_description"
            android:lines="3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <!-- TODO Replace with mapview -->
    <EditText
        android:id="@+id/location"
        android:hint="LOCATION (REPLACE WITH MAP)"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <Button
        android:id="@+id/button"
        android:text="TEST (TESTING LAUNCH MAP VIEW)"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>