<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/card_name"
            android:hint="@string/card_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/card_number"
            android:hint="@string/card_number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/card_cvv"
            android:hint="@string/card_cvv"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <DatePicker
            android:id="@+id/card_datepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:endYear="2024"
            android:startYear="2016"
            android:datePickerMode="spinner"
            android:calendarViewShown="false">
        </DatePicker>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="@dimen/button_wide_text_size"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
</LinearLayout>